LJSUP-6265: System message (z-index bugfix)
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@16810 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/lj_base.css
+++ b/htdocs/stc/lj_base.css
@@ -512,6 +512,7 @@ Must be removed after implementation of Framework! */
 	position: absolute;
 	top: 100px;
 	left: 0;
+	z-index: 9999;
 	width: 100%;
 	padding: 0;
 	margin: 0;
